--- a/templates/client/template.html
+++ b/templates/client/template.html
@@ -1,4 +1,5 @@
 {% extends 'client/base.html' %}
+{% load static %}
 {% load i18n %}
 
 {% block body %}
@@ -30,12 +31,41 @@
                                         <li><a href="#">Japanese</a></li>
                                     </ul>{% endcomment %}
                                 </li>
-                                <li class="top_links"><a href="#">{% trans '我的账户' %} <i
-                                        class="ion-chevron-down"></i></a>
-                                    <ul class="dropdown_links">
+                                {% comment %}
+                                todo: 添加currency change
+                                <li class="currency"><a href="#">USD <i class="ion-chevron-down"></i></a>
+                                    <ul class="dropdown_currency">
+                                        <li><a href="#">EUR – Euro</a></li>
+                                        <li><a href="#">GBP – British Pound</a></li>
+                                        <li><a href="#">INR – India Rupee</a></li>
+                                    </ul>
+                                </li>{% endcomment %}
+                            </ul>
+                        </div>
+                        {% comment %}<div class="home_contact">
+                            <div class="contact_box">
+                                <label>Location</label>
+                                <p>Your address goes here.</p>
+                            </div>
+                            <div class="contact_box">
+                                <label>Call free</label>
+                                <p><a href="tel:0123456789">0123456789</a></p>
+                            </div>
+                        </div>{% endcomment %}
+                        <div id="menu" class="text-left ">
+                            <ul class="offcanvas_main_menu">
+                                <li class="menu-item-has-children {% if active_page == "index" %}active{% endif %}"><a
+                                        href="{% url 'client:index' %}">Home | 首页</a>
+                                </li>
+                                <li class="menu-item-has-children {% if active_page == "shop" %}active{% endif %}"><a
+                                        href="{% url 'client:shop' %}">shop | 商品</a>
+                                </li>
+                                <li class="menu-item-has-children {% if active_page == "user" %}active{% endif %}">
+                                    <a href="#">Profile | 用户</a>
+                                    <ul class="sub_menu">
                                         {% if request.user.is_authenticated %}
                                             <li><a href="#">{% trans '资料' %}</a></li>
-                                            <li><a href="#">{% trans '购物车' %}</a></li>
+                                            <li><a href="{% url 'client:cart' %}">{% trans '购物车' %}</a></li>
                                             <li><a href="{% url 'client:wishlist' %}">{% trans '心愿单' %}</a></li>
                                             <li><a href="{% url 'client:logout' %}">{% trans '登出' %}</a></li>
                                         {% else %}
@@ -44,100 +74,10 @@
                                         {% endif %}
                                     </ul>
                                 </li>
-                            </ul>
-                        </div>
-                        <div id="menu" class="text-left ">
-                            <ul class="offcanvas_main_menu">
-                                <li class="menu-item-has-children active">
-                                    <a href="#">Home</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="index.html">Home 1</a></li>
-                                        <li><a href="index-2.html">Home 2</a></li>
-                                        <li><a href="index-3.html">Home 3</a></li>
-                                        <li><a href="index-4.html">Home 4</a></li>
-                                        <li><a href="index-5.html">Home 5</a></li>
-                                        <li><a href="index-6.html">Home 6</a></li>
-                                        <li><a href="index-7.html">Home 7</a></li>
-                                        <li><a href="index-8.html">Home 8</a></li>
-                                        <li><a href="index-9.html">Home 9</a></li>
-                                        <li><a href="index-10.html">Home 10</a></li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item-has-children">
-                                    <a href="#">Shop</a>
-                                    <ul class="sub-menu">
-                                        <li class="menu-item-has-children">
-                                            <a href="#">Shop Layouts</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="shop.html">shop</a></li>
-                                                <li><a href="shop-fullwidth.html">Full Width</a></li>
-                                                <li><a href="shop-fullwidth-list.html">Full Width list</a></li>
-                                                <li><a href="shop-right-sidebar.html">Right Sidebar </a></li>
-                                                <li><a href="shop-right-sidebar-list.html"> Right Sidebar list</a></li>
-                                                <li><a href="shop-list.html">List View</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="menu-item-has-children">
-                                            <a href="#">other Pages</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="portfolio.html">portfolio</a></li>
-                                                <li><a href="portfolio-details.html">portfolio details</a></li>
-                                                <li><a href="cart.html">cart</a></li>
-                                                <li><a href="checkout.html">Checkout</a></li>
-                                                <li><a href="my-account.html">my account</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="menu-item-has-children">
-                                            <a href="#">Product Types</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="product-details.html">product details</a></li>
-                                                <li><a href="product-sidebar.html">product sidebar</a></li>
-                                                <li><a href="product-grouped.html">product grouped</a></li>
-                                                <li><a href="variable-product.html">product variable</a></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item-has-children">
-                                    <a href="#">blog</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="blog.html">blog</a></li>
-                                        <li><a href="blog-details.html">blog details</a></li>
-                                        <li><a href="blog-fullwidth.html">blog fullwidth</a></li>
-                                        <li><a href="blog-left.html">blog left</a></li>
-                                        <li><a href="blog-none-sidebar.html">no sidebar</a></li>
-                                        <li><a href="blog-right.html">blog right</a></li>
-                                        <li><a href="blog-sticky.html">blog sticky</a></li>
-                                    </ul>
 
-                                </li>
-                                <li class="menu-item-has-children">
-                                    <a href="#">pages </a>
-                                    <ul class="sub-menu">
-                                        <li><a href="about.html">About Us</a></li>
-                                        <li><a href="services.html">services</a></li>
-                                        <li><a href="faq.html">Frequently Questions</a></li>
-                                        <li><a href="contact.html">contact</a></li>
-                                        <li><a href="login.html">login</a></li>
-                                        <li><a href="wishlist.html">Wishlist</a></li>
-                                        <li><a href="404.html">Error 404</a></li>
-                                        <li><a href="compare.html">compare</a></li>
-                                        <li><a href="privacy-policy.html">privacy policy</a></li>
-                                        <li><a href="coming-soon.html">coming soon</a></li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item-has-children">
-                                    <a href="my-account.html">my account</a>
-                                </li>
-                                <li class="menu-item-has-children">
-                                    <a href="about.html">About Us</a>
-                                </li>
-                                <li class="menu-item-has-children">
-                                    <a href="contact.html"> Contact Us</a>
-                                </li>
                             </ul>
                         </div>
-                        <div class="Offcanvas_footer">
+                        {% comment %}<div class="Offcanvas_footer">
                             <span><a href="#"><i class="fa fa-envelope-o"></i> demo@example.com</a></span>
                             <ul>
                                 <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -146,7 +86,7 @@
                                 <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
                                 <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
-                        </div>
+                        </div>{% endcomment %}
                     </div>
                 </div>
             </div>
@@ -203,7 +143,8 @@
                 <div class="row">
                     <div class="offset-lg-5 offset-2 col-lg-2 col-md-3 col-4">
                         <div class="logo">
-                            <a href="{% url 'client:index' %}"><img src="assets/img/logo/logo.png" alt=""></a>
+                            <a href="{% url 'client:index' %}"><img src="{% static 'client/img/brand.png' %}"
+                                                                    alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-7 col-6">
@@ -280,6 +221,9 @@
                                             <div class="cart_button view_cart">
                                                 <a href="{% url 'client:login' %}">{% trans "登录" %}</a>
                                             </div>
+                                            <div class="cart_button checkout">
+                                                <a href="{% url 'client:register' %}">{% trans "注册" %}</a>
+                                            </div>
                                         {% endif %}
                                     </div>
                                     <div class="product_desc text-center mt-3">
@@ -302,12 +246,11 @@
                     <div class="col-12">
                         <div class="main_menu_inner">
                             <div class="logo_sticky">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                                <a href="index.html"><img src="{% static 'client/img/brand.png' %}" alt=""></a>
                             </div>
                             <div class="main_menu">
                                 <nav>
                                     <ul>
-
                                         <li {% if active_page == "index" %}class="active"{% endif %}><a
                                                 href="{% url 'client:index' %}">Home | 首页</a>
                                         </li>
@@ -358,34 +301,20 @@
                                                 <li><a href="blog-sticky.html">blog sticky</a></li>
                                             </ul>
                                         </li>{% endcomment %}
-                                        <li><a href="portfolio.html">portfolio</a></li>
-                                        <li><a href="#">pages <i class="fa fa-angle-down"></i></a>
-                                            <ul class="sub_menu pages">
-                                                <li><a href="about.html">About Us</a></li>
-                                                <li><a href="services.html">services</a></li>
-                                                <li><a href="faq.html">Frequently Questions</a></li>
-                                                <li><a href="contact.html">contact</a></li>
-                                                <li><a href="login.html">login</a></li>
-                                                <li><a href="wishlist.html">Wishlist</a></li>
-                                                <li><a href="404.html">Error 404</a></li>
-                                                <li><a href="compare.html">compare</a></li>
-                                                <li><a href="privacy-policy.html">privacy policy</a></li>
-                                                <li><a href="coming-soon.html">coming soon</a></li>
-                                            </ul>
-                                        </li>
                                         <li {% if active_page == "user" %}class="active"{% endif %}><a href="#">Profile
                                             | 用户 <i class="fa fa-angle-down"></i></a>
                                             <ul class="sub_menu pages">
-                                                <li><a href="about.html">About Us</a></li>
-                                                <li><a href="services.html">services</a></li>
-                                                <li><a href="faq.html">Frequently Questions</a></li>
-                                                <li><a href="contact.html">contact</a></li>
-                                                <li><a href="login.html">login</a></li>
-                                                <li><a href="wishlist.html">Wishlist</a></li>
-                                                <li><a href="404.html">Error 404</a></li>
-                                                <li><a href="compare.html">compare</a></li>
-                                                <li><a href="privacy-policy.html">privacy policy</a></li>
-                                                <li><a href="coming-soon.html">coming soon</a></li>
+                                                {% if request.user.is_authenticated %}
+                                                    <li><a href="#">{% trans '资料' %}</a></li>
+                                                    <li><a href="{% url 'client:cart' %}">{% trans '购物车' %}</a></li>
+                                                    <li><a href="{% url 'client:wishlist' %}">{% trans '心愿单' %}</a>
+                                                    </li>
+                                                    <li><a href="{% url 'client:logout' %}">{% trans '登出' %}</a></li>
+                                                {% else %}
+                                                    <li><a href="{% url 'client:login' %}">{% trans '登录' %}</a></li>
+                                                    <li><a href="{% url 'client:register' %}">{% trans '注册' %}</a>
+                                                    </li>
+                                                {% endif %}
                                             </ul>
                                         </li>
                                     </ul>
