--- a/templates/client/base.html
+++ b/templates/client/base.html
@@ -59,11 +59,18 @@
 
 <!-- Main JS -->
 <script src="{% static 'client/js/main.js' %}"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
     const notyf = new Notyf({
         duration: 1500,
+        types: [
+            {
+                type: 'info',
+                background: 'blue',
+                icon: false
+            }
+        ]
     });
-
     $(document).ready(function () {
         $(".select2").select2({
             width: 'resolve',
@@ -71,7 +78,8 @@
             minimumResultsForSearch: Infinity,
         });
     })
-
+</script>
+<script>
     $(document).on('click', 'a.add_wishlist, button.add_wishlist', function (e) {
         e.preventDefault();
         let $this = $(this);
