--- a/templates/client/base.html
+++ b/templates/client/base.html
@@ -13,8 +13,8 @@
     ========================= -->
 
     <!-- Plugins CSS -->
-    {# <script src="https://kit.fontawesome.com/286f5a36ee.js" crossorigin="anonymous"></script>#}
     <link rel="stylesheet" href="{% static 'client/css/plugins.css' %}">
+    <script src="https://kit.fontawesome.com/286f5a36ee.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
